@@ -2,7 +2,7 @@
 # c-ares Makefile for djgpp/gcc/Watt-32.
 #   By Gisle Vanem <giva@bgnett.no> 2004.
 #
-# $Id: Makefile.dj,v 1.34 2009-06-20 13:07:59 giva Exp $
+# $Id: Makefile.dj,v 1.35 2009-07-14 13:38:50 gknauf Exp $
 
 
 TOPDIR = ..
@@ -37,13 +37,13 @@ EX_LIBS += $(WATT32_ROOT)/lib/libwatt.a
 
 OBJECTS = $(addprefix $(OBJ_DIR)/, $(CSOURCES:.c=.o))
 
-all: $(OBJ_DIR) config.h libcares.a ahost.exe adig.exe acountry.exe
+all: $(OBJ_DIR) ares_config.h libcares.a ahost.exe adig.exe acountry.exe
 	@echo Welcome to c-ares.
 
 libcares.a: $(OBJECTS)
 	ar rs $@ $?
 
-config.h: config.dos
+ares_config.h: config.dos
 	$(COPY) $^ $@
 
 ahost.exe: ahost.c $(OBJ_DIR)/ares_getopt.o $(OBJ_HACK)
@@ -58,7 +58,7 @@ acountry.exe: acountry.c $(OBJ_DIR)/ares_getopt.o $(OBJ_HACK)
 # clean generated files
 #
 genclean:
-	- $(DELETE) config.h
+	- $(DELETE) ares_config.h
 
 # clean object files and subdir
 #
