@@ -1,5 +1,5 @@
 #################################################################
-# $Id: Makefile.netware,v 1.62 2009-05-02 02:36:48 yangtse Exp $
+# $Id: Makefile.netware,v 1.63 2009-07-14 13:38:50 gknauf Exp $
 #
 ## Makefile for building libcares (NetWare version - gnu make)
 ## Use: make -f Makefile.netware
@@ -160,7 +160,7 @@ lib: prebuild $(LTARGET)
 
 nlm: prebuild $(TARGETS)
 
-prebuild: $(OBJDIR) ares_build.h $(OBJDIR)/version.inc config.h
+prebuild: $(OBJDIR) ares_build.h $(OBJDIR)/version.inc ares_config.h
 
 install: $(INSTDIR) all
 	@$(CP) *.nlm $(INSTDIR)
@@ -170,7 +170,7 @@ install: $(INSTDIR) all
 	@$(CP) ../RELEASE-NOTES $(INSTDIR)
 
 clean:
-	-$(RM) $(LTARGET) $(TARGETS) config.h
+	-$(RM) $(LTARGET) $(TARGETS) ares_config.h
 	-$(RM) -r $(OBJDIR)
 	-$(RM) -r arpa
 
@@ -269,7 +269,7 @@ ifeq ($(LD),nlmconv)
 	@echo $(DL)output $(notdir $(@:.def=.nlm))$(DL) >> $@
 endif
 
-config.h: Makefile.netware
+ares_config.h: Makefile.netware
 	@echo Creating $@
 	@echo $(DL)/* $@ for NetWare target.$(DL) > $@
 	@echo $(DL)** Do not edit this file - it is created by make!$(DL) >> $@
